[package]
name = "ntp-nostd"
version = "0.0.1"
description = "Basic client request and response parse for NTP protocol, very much a WIP"
documentation = "https://docs.rs/nostr-nostd"
repository = "https://github.com/isaac-asdf/ntp-nostd"
authors = ["Isaac Eiter"]
readme = "README.md"
categories = ["networking", "no-std"]
keywords = ["ntp"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tungstenite = { version = "0.20.0", features = ["rustls"] }
url = "2.4.0"
